--- a/templates/_partials/global/_google-analytics.twig
+++ b/templates/_partials/global/_google-analytics.twig
@@ -1,5 +1,5 @@
 {# -- Google Analytics -- #}
-{% if siteSettings.googleAnalyticsTrackingCode|length %}
+{% if getenv('GA_TRACKING_ID')|length %}
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -13,7 +13,7 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', '{{ siteSettings.googleAnalyticsTrackingCode|trim }}', 'auto');
+        ga('create', '{{ getenv('GA_TRACKING_ID') }}', 'auto');
         ga('set', 'transport', 'beacon');
         ga('require', 'displayfeatures');
         // ga('send', 'pageview');
