--- a/cms/templates/_partials/components/hero.twig
+++ b/cms/templates/_partials/components/hero.twig
@@ -1,5 +1,5 @@
 <!-- Primary Hero Header Section -->
-{% import '_macros/_lazyImager' as LazyImager %}
+{% import '_macros/lazyImager' as LazyImager %}
 
 {# entry variable defaults #}
 {% set backgroundImage = entry['headerBackgroundImage'] is defined ? entry.headerBackgroundImage.one() : null %}
