--- a/cms/templates/_layouts/layout.twig
+++ b/cms/templates/_layouts/layout.twig
@@ -10,26 +10,22 @@
  # templates.
 -#}
 
-{% extends "_layouts/_base" %}
+{% extends "_layouts/base" %}
 
 {# Set the namespace we'll use for Highway views to match our namespace in the nav. If it's not defined, use 'common' #}
 {% set namespace = 'common' %}
 
-{# Set the block prefix that we'll use for the content builder fields #}
-{% set blockPrefix = '' %}
-
 {% block body %}
 
-    {% include "_partials/components/_page_revealer.twig" %}
+    {% include "_partials/components/page_revealer.twig" %}
 
     <main data-router-wrapper>
         <div data-router-view="{{ namespace }}">
             <div class="page-wrapper">
                 {# -- Header -- #}
-                {% include "_partials/components/_header.twig" %}
+                {% include "_partials/components/header.twig" %}
 
                 <div id="page-content-container">
-                    {# {% include "_partials/_notification_banner.twig" %} #}
                     {# -- Primary content block -- #}
                     {% block content %}{% endblock %}
 
@@ -38,11 +34,11 @@
                 </div>
 
                 {# -- Footer -- #}
-                {% include "_partials/components/_footer.twig" %}
+                {% include "_partials/components/footer.twig" %}
             </div>
         </div>
     </main>
     {# -- Global HTML Footer -- #}
-    {% include "_partials/global/_global_footer.twig" %}
+    {% include "_partials/global/global_footer.twig" %}
 
 {% endblock %}
