--- a/cms/templates/error.twig
+++ b/cms/templates/error.twig
@@ -1,21 +1,22 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
-{% set entry = craft.entries.section("genericError").limit(1).one() %}
-
 {% extends "_layouts/_layout.twig" %}
 
 {% block _inline_css %}
-    <style>
-        {{ source ("error_critical.min.css", ignore_missing = true) }}
-    </style>
 {% endblock %}
 
 {% block content %}
     
-    <section>
-        <div>
-            <p>
-                Generic Error
-            </p>
+    <section class="section is-medium animatable missing-page-error-section">
+        <div class="page-container is-small-desktop">
+            <div class="missing-page-error text-center">
+                <h2>Something went wrong (generic error)</h2>
+                <p>
+                    <strong>Sorry, we're not sure what happened here.</strong>
+                    <br>
+                    Unless you really love this page,
+                    <a href="{{ siteUrl }}">feel free to visit our home page instead.</a>
+                </p>
+            </div>
         </div>
     </section>
 
