--- a/cms/templates/_pages/home.twig
+++ b/cms/templates/_pages/home.twig
@@ -5,10 +5,19 @@
 {% endblock %}
 
 {% block content %}
-<section class="section is-small animatable">
-    <div class="page-container">
-        <h1>Welcome to Craft Starter</h1>
-        <p>Looks like you set up the proper page template structure. Lets get this new website up and running!</p>
+<section class="section section--small animatable">
+    <div class="container container--small">
+        <h1>Welcome to the Craft Starter bootstrap theme</h1>
+        <p>Looks like everything is set up properly! Get in there and make something cool. </p>
+
+        <div class="grid-x grid-margin-x">
+            <div class="cell medium-6">
+                This is an example column
+            </div>
+            <div class="cell medium-6">
+                This is an example column
+            </div>
+        </div>
     </div>
 </section>
 
