--- a/cms/templates/_partials/blocks/image.twig
+++ b/cms/templates/_partials/blocks/image.twig
@@ -24,8 +24,8 @@
     } %}
 {% endif %}
 
-<section class="section is-small section-{{ block_type}}-block animatable">
-    <div class="page-container">
+<section class="section section--small section-{{ block_type}}-block animatable">
+    <div class="container container--small">
         {% if heading|length %}
             <h2 class="heading">{{ heading | typogrify(true) }}</h2>
         {% endif %}
