--- a/cms/templates/_partials/components/footer-navigation.twig
+++ b/cms/templates/_partials/components/footer-navigation.twig
@@ -5,7 +5,7 @@
 }).all() %}
 
 <div class="footer-navigation">
-    <div class="page-container">
+    <div class="container">
         <div class="footer-navigation-content">
             <div class="nav-columns">
                 {% for column in footerNavigation %}
