--- a/cms/templates/_partials/components/footer.twig
+++ b/cms/templates/_partials/components/footer.twig
@@ -1,6 +1,6 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 <footer class="site-footer animatable">
-    <div class="page-container">
+    <div class="container">
         <div class="copyright">
             &copy;{{ now|date('Y') }}
         </div>
