--- a/cms/templates/_partials/components/hero.twig
+++ b/cms/templates/_partials/components/hero.twig
@@ -33,7 +33,7 @@
         </div>
     {% endif %}
 
-    <div class="grid-container content-container">
+    <div class="container content-container">
         <div class="content">
             {% if formattedHeading|length %}
                 <p class="formattedHeading is-subheading">{{ formattedHeading }}</p>
