--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,15 +7,17 @@
 @charset "utf-8";
 
 /******************** Imports ********************/
+@import '~foundation-sites/scss/util/util';
+
 @import "fonts";
-@import "variables";
 @import "functions";
+@import "variables";
 @import "animations";
 
 @import "foundation-settings";
 @import '~foundation-sites/scss/foundation';
 
-// Global styles
+// Foundation Imports
 @include foundation-global-styles;
 @include foundation-forms;
 @include foundation-typography;
@@ -31,6 +33,8 @@
 @include foundation-table;
 
 // Helpers
+@include foundation-float-classes;
+@include foundation-flex-classes;
 @include foundation-visibility-classes;
 
 // Hamburger Icons
@@ -183,11 +187,21 @@ a.logo {
 
 // Navigation
 header.site-header {
-  padding: 0.5rem 0;
+  padding: 1rem 0;
   border-bottom: 1px solid #DDDDDD;
 
-  nav.main-nav .nav-logo {
-    display: inline-block;
+  .main-nav--section nav.main-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .nav-logo {
+      display: inline-block;
+    }
+
+    nav.main-nav .nav-links {
+      flex: 1;
+    }
   }
 } 
 
