adjusted base CMS setup, disabled redis by default

--- a/cms/templates/_pages/home.twig
+++ b/cms/templates/_pages/home.twig
@@ -6,10 +6,14 @@
 
 {% block content %}
 <section class="section section--small animatable">
-    <div class="container container--small">
-        <h1>Welcome to the Craft Starter bootstrap theme</h1>
-        <p>Looks like everything is set up properly! Get in there and make something cool. </p>
+    <div class="container">
+        <h2>Welcome to the BWS bootstrap theme for Craft CMS</h2>
+        <p>Looks like everything is set up properly!</p>
+    </div>
+</section>
 
+<section class="section section--small animatable">
+	<div class="container">
         <div class="grid-x grid-margin-x">
             <div class="cell medium-6">
                 This is an example column
@@ -18,8 +22,9 @@
                 This is an example column
             </div>
         </div>
-    </div>
+	</div>
 </section>
+
 
 {% include '_partials/components/content_builder' %}
 
